<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/security_dialog_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@color/material_on_primary_disabled"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/security_dialog_body"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/blockout_accept_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/mf_button"
        android:clickable="true"
        android:enabled="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/continue_button"         />

</LinearLayout>
